--- a/src/pages/Landing_page/landingstyle.css
+++ b/src/pages/Landing_page/landingstyle.css
@@ -1,11 +1,20 @@
 .landing-page {
+    width: 30vw; /* Full width of the viewport */
+    height: 90vh; /* Adjust height as needed */
+    background-size: cover;
+    background-position: center;
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0; /* Optional background */
-}
-
+    justify-content: center;
+  }
+  
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  
 .content {
     display: flex;
     flex-direction: column;
@@ -36,6 +45,7 @@
     font-weight: bold;
     line-height: 1.2;
     color: #152744;
+    font-family: "Nerko One", cursive;
 }
 
 .landing-button {
